[package]
name = "websocat4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.22.1"
bytes = "1.5.0"
clap = { version = "4.5.9", default-features = false, features = ["help", "usage", "std", "derive"] }
clap_lex = "0.7.2"
flagset = "0.4.4"
futures = "0.3.28"
hex = "0.4.3"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.5", features = ["tokio"] }
lru = "0.12.3"
native-tls = { version = "0.2.12", features = [] }
pin-project = "1.1.5"
rand = "0.8.5"
rhai = { version = "1.16.2", features = ["serde", "internals", "sync", "no_custom_syntax", "no_float", "no_time", "no_module"] }
serde = { version = "1.0.188", features = ["derive"] }
sha1 = "0.10.6"
tinyvec = "1.6.0"
tokio = { version = "1.32.0", features = ["sync", "net", "rt", "macros", "io-util", "io-std", "time", "process"] }
tokio-native-tls = "0.3.1"
tokio-util = "0.7.11"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt","json"] }
websocket-sans-io = "0.1.0"

[features]
native-tls-alpn = ["native-tls/alpn"]
