[package]
name = "websocat"
version = "4.0.0-alpha2"
edition = "2021"
include = ["/src","/Cargo.toml","/doc.md","/README.md","/DESIGN.md","/TODO.md","/misc", "/tests"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/websocat"
description = "Command-line client for web sockets, like netcat/curl/socat for ws://."
keywords = ["WebSocket", "socat", "rfc6455", "netcat", "cli"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.22.1"
bytes = "1.5.0"
clap = { version = "4.5.9", default-features = false, features = ["help", "usage", "std", "derive", "error-context"] }
clap_lex = "0.7.2"
flagset = "0.4.4"
futures = "0.3.28"
hex = "0.4.3"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.5", features = ["tokio"] }
lru = "0.13.0"
native-tls = { version = "0.2.12", features = [], optional=true }
pin-project = "1.1.5"
rand = "0.9"
rand_chacha = "0.9.0"
rand_pcg = "0.9.0"
rhai = { version = "1.16.2", features = ["serde", "internals", "sync", "no_custom_syntax", "no_float", "no_time", "no_module"] }
serde = { version = "1.0.188", features = ["derive"] }
sha1 = "0.10.6"
tinyvec = "1.6.0"
tokio = { version = "1.32", features = ["sync", "net", "rt", "macros", "io-util", "io-std", "time", "process", "fs"] }
tokio-native-tls = {version="0.3.1", optional=true}
tokio-test = "0.4.4"
tokio-util = "0.7.11"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt","json"] }
websocket-sans-io = "0.1.0"
shlex = "1.3.0"
flume = "0.11.1"
socket2 = "0.5.8"
libc = "0.2.169"
itertools = "0.14.0"
tokio-rustls = { version = "0.26.1", optional = true, default-features=false,features=["logging","tls12","ring"] }
webpki-roots = { version = "0.26.8", optional = true }
rustls = { version = "0.23.22", optional = true, default-features=false, features=["logging","std","tls12","ring"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
console-subscriber = { version = "0.4.1", optional = true }

[target.'cfg(all(unix,any(target_os = "linux",target_os = "android",target_os = "freebsd")))'.dependencies]
tokio-seqpacket = "0.8.0"

[target.'cfg(unix)'.dependencies]
filedesc = "0.6.3"
nix = { version = "0.29.0", features = ["uio"] }

[features]
default=["ssl"]
native-tls-alpn = ["native-tls/alpn"]
ssl=["dep:tokio-native-tls", "dep:native-tls"]
vendored_openssl = ["native-tls/vendored"]
less_logs=["tracing/max_level_info"]
ioful_tests=[]
online_tests=[]
rustls= ["dep:rustls","dep:webpki-roots","dep:tokio-rustls"]
tokioconsole = ["tokio/tracing", "dep:console-subscriber"]

[dev-dependencies]
assert_cmd = "2.0.16"
tokio = {version = "1.32",features=["test-util"]}

#[patch.crates-io]
#tokio-test = { path = "/mnt/fluff/vi/src/tokio/tokio-test" }
#tokio = { path = "/mnt/fluff/vi/src/tokio/tokio" }
