[package]
name = "websocat-api"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features=["sync"] }
async-trait = "0.1.41"
smallvec = "1.4.2"
id_tree = "1.7.0"
anyhow = "1.0.34"
futures = "0.3.8"
downcast-rs = "1.2.0"
http = "0.2.3"
slab_typesafe = "0.1.3"
tinyvec = "1.1.1"
static_assertions = "1.1.0"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
