[package]
name = "websocat-api"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1"}
async-trait = "0.1.41"
smallvec = "1.4.2"
id_tree = "1.7.0"
anyhow = "1.0.34"
futures = "0.3.13"
downcast-rs = "1.2.0"
http = "0.2.3"
slab_typesafe = "0.1.3"
tinyvec = "1.1.1"
static_assertions = "1.1.0"
bytes = "1.0.1"
tracing = "0.1.25"
string-interner = "0.12.2"
pin-project = "1"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"

[features]
default = ["sync"]
sync = ["tokio/sync"]
