[package]
name = "websocat-basic"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocat-derive = {path = "../websocat-derive"}
websocat-api = {path = "../websocat-api"}

tokio = {version="1", features=[]}
tracing = "0.1.25"

[features]
default = ["net","io-std", "fs", "process", "race"]
net = ["tokio/net", "tokio/rt", "tokio/rt"]
race = ["tokio/sync", "tokio/macros"]
io-std = ["tokio/io-std"]
fs = ["tokio/fs"]
process = ["tokio/process"]
