[package]
name = "websocat-http"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

websocat-derive = {path = "../websocat-derive"}
websocat-api = {path = "../websocat-api"}

tracing = "0.1.25"

hyper = { version = "0.14.4", default_features=false, features = ["client","http1","server","stream"] }
readwrite = {version = "0.2", features=["tokio"]}
tokio = {version = "1", features=[]}
futures = "0.3.13"
rand = "0.8.3"
base64 = "0.13.0"
