[package]
name = "websocat-ioless"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
description = "Websocat nodes that does not do any IO or depend on time"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocat-derive = {path = "../websocat-derive"}
websocat-api = {path = "../websocat-api"}

tracing = "0.1.25"
tokio = {version = "1", features=["sync","io-util", "rt"]}
tokio-util = { version = "0.6.4", features = ["codec"] }
