[package]
name = "websocat-session"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocat-api = {path = "../websocat-api"}

tokio = {version = "1", features=["rt", "io-util"]}
tracing = "0.1.25"
