[package]
name = "websocat-syncnodes"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

websocat-derive = {path = "../websocat-derive"}
websocat-api = {path = "../websocat-api"}

tracing = "0.1.25"