[package]
name = "allnodes-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.11.4"
darling = "0.13.1"
log = "0.4.14"
proc-macro2 = "1.0.36"
syn = {version="1.0.86",features=["parsing","extra-traits", "full"]}
toml = "0.5.8"
tracing-subscriber = "0.3.9"
walkdir = "2.3.2"
