[package]
name = "websocat-readline"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocat-derive = {path = "../websocat-derive"}
websocat-api = {path = "../websocat-api"}

# rustyline = "8.0.0"
# linefeed = "0.6.0"
rustyline-async = "0.1.2"
futures = "0.3.21"
