[package]
name = "websocat-tungstenite"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

websocat-derive = {path = "../websocat-derive"}
websocat-api = {path = "../websocat-api"}

tracing = "0.1.25"
tokio = {version = "1", features=[]}
tokio-tungstenite = "0.16"
readwrite = {version = "0.2", features=["tokio"]}

futures="0.3.13"

[features]
default = ["ssl"]
ssl = ["tokio-tungstenite/native-tls"]
