[package]
name = "websocat"
version = "3.0.0-prealpha0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

[dependencies]
websocat-api = {path="../websocat-api"}
websocat-session = {path="../websocat-session"}
websocat-allnodes = {path = "../websocat-allnodes"}
tracing-subscriber = {version="0.3", features=["env-filter"]}
tokio = {version = "1", features=["macros", "rt"]}
lexopt = "0.2.0"
os_str_bytes = "5.0.0"
textwrap = { version = "0.14.2", default-features = false }

